lib/policy_definitions/flux-source-policy.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "source.policy.fluxcd.controlplane.io"
  annotations:
    policy.fluxcd.controlplane.io/role: |
      Restrict Flux access to Git repositories, OCI registries and Helm repositories,
      based on an allowlist defined in a ConfigMap stored in the flux-system namespace.
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: ["source.toolkit.fluxcd.io"]
        apiVersions: ["*"]
        operations: ["CREATE", "UPDATE"]
        resources: ["gitrepositories", "ocirepositories", "helmrepositories"]
  matchConditions:
    - name: "exclude-source-controller-finalizer"
      expression: >
        request.userInfo.username != "system:serviceaccount:flux-system:source-controller"
  paramKind:
    apiVersion: v1
    kind: ConfigMap
  variables:
    - name: url
      expression: object.spec.url
    - name: sources
      expression: params.data.sources.split(' ')
  validations:
    - expression: >
        variables.sources.exists_one(prefix, variables.url.startsWith(prefix))
      messageExpression: >
        "Source " + variables.url + " is not allowed, must be one of " + variables.sources.join(", ")
      reason: Invalid
